--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,14 +25,14 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".glance.Widget"
+        <receiver android:name=".widgets.WidgetReceiver"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
             <meta-data
                 android:name="android.appwidget.provider"
-                android:resource="@xml/my_app_widget_info" />
+                android:resource="@xml/favourite_widget" />
         </receiver>
     </application>
 </manifest>
